feat: add preloader

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
 </head>
 
 <body class="page__body">
+  <div class="preloader">
+    <div class="preloader__row">
+      <div class="preloader__item"></div>
+      <div class="preloader__item"></div>
+    </div>
+  </div>
+  <!-- /.preloader -->
   <header class="page-header">
     <a href="index.html" class="page-header__logo">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133 49" class="logo">
@@ -49,7 +56,7 @@
           <source media="(min-width: 768px)" srcset="~images/start-screen/bg-main-tablet.png" type="image/png">
           <source srcset="~images/start-screen/bg-main-mobile.webp" type="image/webp">
           <img class="parallax-bg__img" src="~images/start-screen/bg-main-mobile.png"
-            alt="Two hands touching each other" width="320" height="900">
+            alt="Two hands touching each other">
         </picture>
       </div>
       <h1 class="start-screen__title start-screen__title--mobile">
